--- a/app/src/main/res/layout/bottom_bar.xml
+++ b/app/src/main/res/layout/bottom_bar.xml
@@ -50,7 +50,7 @@
                 android:background="#0000"
                 android:clickable="false"
                 android:scaleType="fitCenter"
-                android:src="@drawable/huodong1" />
+                android:src="@drawable/find1" />
 
             <!--<TextView-->
                 <!--android:layout_width="wrap_content"-->
@@ -75,7 +75,7 @@
                 android:background="#0000"
                 android:clickable="false"
                 android:scaleType="fitCenter"
-                android:src="@drawable/gongyi1" />
+                android:src="@drawable/huodong1" />
 
             <!--<TextView-->
                 <!--android:layout_width="wrap_content"-->
