--- a/app/src/main/res/layout/title_bar_back.xml
+++ b/app/src/main/res/layout/title_bar_back.xml
@@ -4,6 +4,16 @@
     android:layout_height="45dp"
     android:background="@color/colorPrimary">
 
+    <TextView
+        android:id="@+id/btn_back_return"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="24dp"
+        android:text="返回"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
+        android:visibility="visible" />
 
     <TextView
         android:id="@+id/title_text"
