--- a/app/src/main/res/layout/main_tab_03.xml
+++ b/app/src/main/res/layout/main_tab_03.xml
@@ -4,46 +4,99 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#FFF9EF"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
-    <include layout="@layout/title_bar"/>
+    <include layout="@layout/title_bar" />
 
-	<LinearLayout
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-		<LinearLayout
+        <ImageView
+            android:id="@+id/shipin"
+            android:layout_width="match_parent"
+            android:layout_height="130dp"
+            android:layout_marginLeft="18dp"
+            android:layout_marginRight="18dp"
+            android:layout_marginTop="5dp"
+            android:src="@drawable/hd_shipin" />
 
-			android:orientation="vertical"
-			android:layout_width="match_parent"
-			android:layout_height="0dp"
-			android:layout_weight="1">
-			<RelativeLayout
-				android:id="@+id/gongyi"
-				android:padding="20dp"
-				android:layout_width="match_parent"
-				android:layout_weight="1"
-				android:layout_height="0dp">
-				<ImageView
-					android:scaleType="fitXY"
-					android:src="@drawable/gongyi"
-					android:layout_width="match_parent"
-					android:layout_height="match_parent" />
-			</RelativeLayout>
-			<RelativeLayout
-				android:padding="10dp"
-				android:layout_width="match_parent"
-				android:layout_weight="1"
-				android:layout_height="0dp">
-				<ImageView
-					android:layout_width="match_parent"
-					android:layout_height="match_parent" />
-			</RelativeLayout>
-		</LinearLayout>
+        <LinearLayout
+            android:layout_marginLeft="13dp"
+            android:layout_marginRight="13dp"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginBottom="5dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/xiangce"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:src="@drawable/xiangce" />
+
+            <ImageView
+                android:id="@+id/qianxun"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:src="@drawable/qianxun" />
+
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/zhishi"
+            android:layout_width="match_parent"
+            android:layout_height="130dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="18dp"
+            android:layout_marginRight="18dp"
+            android:src="@drawable/zhishi"
+            android:scaleType="fitXY"/>
+    </LinearLayout>
+    <!--<LinearLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:orientation="vertical">-->
+
+    <!--<LinearLayout-->
+
+    <!--android:orientation="vertical"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="0dp"-->
+    <!--android:layout_weight="1">-->
+    <!--<RelativeLayout-->
+    <!--android:id="@+id/gongyi"-->
+    <!--android:padding="20dp"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_weight="1"-->
+    <!--android:layout_height="0dp">-->
+    <!--<ImageView-->
+    <!--android:scaleType="fitXY"-->
+    <!--android:src="@drawable/gongyi"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent" />-->
+    <!--</RelativeLayout>-->
+    <!--<RelativeLayout-->
+    <!--android:padding="10dp"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_weight="1"-->
+    <!--android:layout_height="0dp">-->
+    <!--<ImageView-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent" />-->
+    <!--</RelativeLayout>-->
+    <!--</LinearLayout>-->
 
 
-	</LinearLayout>
+    <!--</LinearLayout>-->
 
 
 </LinearLayout>
