--- a/app/src/main/res/layout/main_tab_03.xml
+++ b/app/src/main/res/layout/main_tab_03.xml
@@ -19,7 +19,7 @@
             android:layout_height="130dp"
             android:layout_marginLeft="18dp"
             android:layout_marginRight="18dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:src="@drawable/hd_shipin" />
 
         <LinearLayout
@@ -27,7 +27,6 @@
             android:layout_marginRight="13dp"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginBottom="5dp"
             android:layout_weight="1"
             android:orientation="horizontal">
 
@@ -55,11 +54,12 @@
             android:id="@+id/zhishi"
             android:layout_width="match_parent"
             android:layout_height="130dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginBottom="10dp"
             android:layout_marginLeft="18dp"
             android:layout_marginRight="18dp"
             android:src="@drawable/zhishi"
-            android:scaleType="fitXY"/>
+            android:scaleType="fitXY"
+            />
     </LinearLayout>
     <!--<LinearLayout-->
     <!--android:layout_width="match_parent"-->
