--- a/app/src/main/res/layout/shipin.xml
+++ b/app/src/main/res/layout/shipin.xml
@@ -1,53 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/activity_video_rl"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:orientation="vertical" >
 
-    >
+    <TextView
+        android:id="@+id/statusbar_bg_layout"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_alignParentTop="true" >
+    </TextView>
 
     <RelativeLayout
+        android:id="@+id/video_rl"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@android:color/transparent"
-        android:gravity="center_vertical">
+        android:layout_height="202dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/library_video_video_margin_top"
+        android:background="@android:color/black" >
 
-        <ImageView
-            android:id="@+id/sec_back"
-            android:layout_width="60dp"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:background="@drawable/sec_back" />
-
-        <TextView
-            android:id="@+id/title_text"
+        <com.xian.www.tangdaizi.second.hd.video.WylVideoView
+            android:id="@+id/videoview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="唐袋子"
-            android:textColor="#fff"
-            android:textSize="20sp" />
+            android:layout_centerInParent="true" />
 
+        <ProgressBar
+            android:id="@+id/loading_pb"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerInParent="true"
+            android:visibility="gone" />
     </RelativeLayout>
 
-
-
-    <FrameLayout
+    <ImageView
+        android:id="@+id/video_image_iv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <com.xian.www.tangdaizi.widget.FullScreen
-            android:id="@+id/videoView"
+        android:layout_height="202dp"
+        android:layout_alignTop="@id/video_rl"
+        android:scaleType="centerCrop" />
+
+    <com.xian.www.tangdaizi.second.hd.video.WylMediaControl
+        android:id="@+id/media_control"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/library_video_controlbar_height"
+        android:layout_alignBottom="@id/video_rl" >
+
+        <RelativeLayout
+            android:id="@+id/video_control_ll"
             android:layout_width="match_parent"
-            android:layout_height="250dp" />
-        <ImageView
-            android:id="@+id/shipinjietu"
-            android:src="@drawable/shi"
-            android:layout_width="match_parent"
-            android:layout_height="250dp" />
-    </FrameLayout>
+            android:layout_height="wrap_content"
+            android:background="@drawable/shape_video_play_shadow" >
 
+            <ImageButton
+                android:id="@+id/mediacontroller_play_pause"
+                android:layout_width="@dimen/library_video_controlbar_height"
+                android:layout_height="@dimen/library_video_controlbar_height"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:background="@android:color/transparent"
+                android:src="@drawable/library_video_mediacontroller_play" />
 
+            <SeekBar
+                android:id="@+id/mediacontroller_seekbar"
+                style="@style/LibraryVideoMediaControllerSeekBar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:layout_toLeftOf="@+id/mediacontroller_time_total"
+                android:layout_toRightOf="@id/mediacontroller_play_pause"
+                android:focusable="true"
+                android:max="1000"
+                android:thumbOffset="0dp" />
 
+            <TextView
+                android:id="@+id/mediacontroller_time_current"
+                style="@style/MediaController_Text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="5dp"
+                android:layout_toRightOf="@id/mediacontroller_play_pause"
+                android:visibility="gone" />
 
-</LinearLayout>
+            <ImageButton
+                android:id="@+id/mediacontroller_half_full_ib"
+                android:layout_width="@dimen/library_video_controlbar_height"
+                android:layout_height="@dimen/library_video_controlbar_height"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:background="@android:color/transparent"
+                android:src="@drawable/library_video_mediacontroller_to_full" />
+
+            <TextView
+                android:id="@+id/mediacontroller_time_total"
+                style="@style/MediaController_Text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toLeftOf="@id/mediacontroller_half_full_ib" />
+        </RelativeLayout>
+    </com.xian.www.tangdaizi.second.hd.video.WylMediaControl>
+
+    <ImageView
+        android:id="@+id/play_symbol_iv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@id/video_rl"
+        android:layout_alignTop="@id/video_rl"
+        android:layout_marginLeft="147dp"
+        android:layout_marginTop="60dp"
+        android:src="@drawable/library_video_play_symbol" />
+
+    <TextView
+        android:id="@+id/divider_tv"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:layout_below="@id/video_rl"
+        android:background="@color/theme_bg_color" />
+
+</RelativeLayout>
